# zoobits

./: CHANGELOG.md  IxMonad.idr  IxMonadLinear.idr  LICENSE  README.md  cmb-ixm.org  dromas.cabal  zoobits.ipkg
app/: Main.hs
idr/: Complex.idr  IxMonad.idr  IxMonadLinear.idr  IxMonadLinearLolipops.idr
idr/Control/Monad/: Indexed.idr  IxMonad.idr
idr/Control/Monad/Indexed/: Linear.idr
idr/Control/Monad/Indexed/Examples/: DVDDrive.idr
idr/Control/Monad/Indexed/Linear/Examples/: DVDDrive.idr
idr/Control/Monad/Linear/: IxMonad.idr
idr/Data/: Algebra.idr  Rational.idr
idr/Examples/: Nats.idr
idr/Examples/Control/Monad/Indexed/: DVDDrive.idr
idr/Examples/Control/Monad/Indexed/Linear/: DVDDrive.idr
idr/Math/: Complex.idr  Rational.idr
idr/Math/Algebra/: QQ.idr
idr/Math/Algebra/Linear/: VectorSpace.idr
idr/Math/Complex/: Rational.idr
src/Control/Monad/: IxMonad.hs  IxMonadExample.hs  LinearIxMonad.hs  LinearIxMonadExample.hs
