cabal-version:      3.4
name:               dromas
version:            0.1.0.0
synopsis:           A runner for linear algebra
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Simon Beaumont
maintainer:         datalligator@icloud.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Control.Monad.IxMonad
                    , Control.Monad.LinearIxMonad
                    , Control.Monad.LinearIxMonadExample
    -- other-modules:
    other-extensions: LinearTypes
    build-depends:    base ^>=4.19.0.0
                    , linear-base
    hs-source-dirs:   src
    default-language: GHC2021

executable dromas
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        dromas

    hs-source-dirs:   app
    default-language: GHC2021

test-suite dromas-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        dromas
